--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/Build_NoCompression.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build.data.br",
-        frameworkUrl: buildUrl + "/Build.framework.js.br",
-        codeUrl: buildUrl + "/Build.wasm.br",
+        dataUrl: buildUrl + "/Build_NoCompression.data",
+        frameworkUrl: buildUrl + "/Build_NoCompression.framework.js",
+        codeUrl: buildUrl + "/Build_NoCompression.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SpeedofShadow",
         productName: "Drunkards' Toast",
