--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
-      @media screen and (orientation: landscape) {
+      @media screen and (orientation: portrait) {
       html {
         /* Rotate the content container */
         transform: rotate(-90deg);
